	2. Tables: Public DynamicTableEntity constructors use DateTime even though the Timestamp property is of type DateTimeOffset
	3. Tables: BeginSaveChangesWithRetries overload ignores the options argument

Issues fixed in 2.0.3 :

	1. All: General metadata correctness test fails when using the RT library to develop windows store apps
	2. Queues: CloudQueueMessage.MaxNumberOfMessagesToPeek, CloudQueueMessage.MaxMessageSize and CloudQueueMessage.MaximumTimeToLive have disappeared from CloudQueueMessage
	3. Queues: CloudQueue.BeginCreateIfNotExists and CloudQueue.BeginDeleteIfExists methods expect valid options argument
	4. Tables: When one or more of the batches fails, but then succeeds on a retry, the "extra" TableResults of the failed transactions are also returned
	5. Tables: TableQuery.GenerateFilterConditionForLong does not append 'L' at the end of the value and thus values larger than Int32.MaxValue cannot be used when filtering
	6. Tables: TableEntity does not support serializing nullable values
	7. Tables: CloudTable.EndListTablesSegmented method does not work correctly

Issues fixed in 2.0.4 :
	1. All: Flush HttpWebRequest's request stream before calling BeginGetResponse
	2. All: Support Null Retry Policies
	3. Blob: Continue ListContainers parsing if a container property is unknown 
	4. Queue (RT): DeleteMessageAsync(string messageId, string popReceipt) ignores the messageId and popReceipt
	5. Tables: Add a TableConstant to define minimum DateTime supported
	6. Tables: Correct count behavior with synchronous non segmented execution
	7. Tables: Allow String.Empty in TableQuery Filters

Issues fixed in 2.0.4.1 :
	1. All: Updated Odata dependency to latest and also changed nuspec to allow any version >= 5.2.0

Issues fixed in 2.0.5 :
	1. All: StorageException is now serializable. Also, other useful objects for debugging(StorageExtendedErrorInformation and RequestResult) are also serializable