@@ -26,7 +26,7 @@ using System.Runtime.InteropServices;
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
 [assembly: AssemblyVersion("2.0.0.0")]
-[assembly: AssemblyFileVersion("2.0.5.0")]
+[assembly: AssemblyFileVersion("2.0.5.1")]
 [assembly: ComVisible(false)]
 #if SIGN
 [assembly: InternalsVisibleTo(
